[metadata]
name = brodoc-loader
version = attr: brodoc_loader.__version__
author = Christian Krenslehner  / devcannon
author_email = ckrenslehner@gmail.com
url = TODO
description = Broker document loader
long_description = file: README.md
long_description_content_type = text/markdown
keywords = broker, document, download, selenium
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

install_requires =
    selenium  >= 4.7
    typer

zip_safe = True

[options.entry_points]
console_scripts = 
    brodoc-loader = brodoc_loader.__main__:cli

[options.packages.find]
where=src